--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,14 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "1.15.4",
+    "com.unity.feature.characters-animation": "1.0.0",
+    "com.unity.feature.worldbuilding": "1.0.1",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.12",
-    "com.unity.ide.vscode": "1.2.4",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.postprocessing": "3.2.1",
+    "com.unity.render-pipelines.universal": "12.1.2",
+    "com.unity.shadergraph": "12.1.2",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.3",
