--- a/.gitattributes
+++ b/.gitattributes
@@ -122,6 +122,6 @@
 *.unity             linguist-generated
 
 # Spine export file for Unity
-*.skel.bytes        binary'
+*.skel.bytes        binary
 
 *.bundle text eol=lf
