--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,6 +17,7 @@
     "com.unity.timeline": "1.7.1",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.2",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "13.1.8",
     "com.unity.visualscripting": "1.7.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
