[spring] level update

--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -104,12 +104,12 @@
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "ScatteringEditor.PreviewThumSize",
-                "value": "{\"m_Value\":64}"
+                "value": "{\"m_Value\":83}"
             },
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"cbe0e588fd8381e48b3b6f36e9a15c18\",\"type\":2},\"prefab\":{\"fileID\":7578576597586230281,\"guid\":\"b21059c9ee08b1642a9abfd3ab1ddc13\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"cbe0e588fd8381e48b3b6f36e9a15c18\",\"type\":2},\"prefab\":{\"fileID\":3182062044404901304,\"guid\":\"f37feaaf69527e64887fa620a96a7dd4\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"cbe0e588fd8381e48b3b6f36e9a15c18\",\"type\":2},\"prefab\":{\"fileID\":1141863221164327,\"guid\":\"1e81ee14406037e4ab12fc8fd19ce1f1\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"cbe0e588fd8381e48b3b6f36e9a15c18\",\"type\":2},\"prefab\":{\"fileID\":7578576597586230281,\"guid\":\"b21059c9ee08b1642a9abfd3ab1ddc13\",\"type\":3}}]}}"
             }
         ]
     }
